--- a/index.html
+++ b/index.html
@@ -22,29 +22,88 @@
 
     <section class="main-content">
       <h3>个人信息</h3>
-      <p>
-        This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.
-      </p>
+      <section class="p-info">
+        <section class="p-info-d">姓名：李梦影</section>
+        <section class="p-info-d">性别：女</section>
+        <section class="p-info-d">学历：本科</section>
+        <section class="p-info-d">学制：四年</section>
+        <section class="p-info-d">联系电话：18501531130</section>
+        <section class="p-info-d">联系邮箱：1174748035@qq.com</section>
+        <section class="p-info-d">计算机证书：软件设计师、Java工程师</section>
+        <section class="p-info-d">其他证书：驾驶证、普通话、三笔字</section>
+        <section class="p-info-d">英语等级：英语四级</section>
+        <section class="p-info-d">爱好特长：PS、羽毛球、横笛</section>
+        <section class="clear-f"></section>
+      </section>
 
       <h3>工作经验</h3>
-      <p>
-        This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.
-      </p>
+      <section class="p-info">
+        <p>2012-2013 暑期在重庆猫扑网络科技有限公司学习；</p>
+        <p>2012-2014 在重庆文理学院SOVO实验中心学习；</p>
+        <p>2015.3-2015.7 在重庆红杉软件有限公司工作；</p>
+        <p>2015.7-2016.2 在江苏慧库天下软件有限公司工作。</p>
+      </section>
 
-      <h3>项目经验</h3>
-      <p>
-        This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.
-      </p>
+      <h3>在校项目经验</h3>
+      <section class="p-info">
+        <p>1.重庆文理学院计算机工程实验教学中心【网站】；</p>
+        <p>2.重庆文理学院软件工程学院教学质量测评系统【网站】；</p>
+        <p>3.重庆文理学院软件工程学院教师信息管理系统【网站】；</p>
+        <p>4.重庆文理学院校园十佳歌手大赛前台制作【网页】；</p>
+        <p>5.参赛Flash项目：水【Flash】；</p>
+        <p>6.重庆市沙坪坝区新桥医院会议【网站】；</p>
+        <p>7.重庆市大学生ACM程序设计大赛网站及ACM大赛信息管理系统【网站】；</p>
+        <p>8.安卓项目开发实训：疯狂踩水果游戏开发【策划、美工】；</p>
+        <p>9.Java实训：易买网【网站】。</p>
+      </section>
+
+      <h3>公司项目经验</h3>
+      <section class="p-info">
+        <p>1.重庆树荣化工官网建设项目（中英文版）【网站】；</p>
+        <p>2.重庆大圆祥房地产官网建设项目【网站】；</p>
+        <p>3.重庆有木有鱼官网建设项目【网站】；</p>
+        <p>4.香港徽帝中文网站建设项目【网站】；</p>
+        <p>5.重庆喵鱼官网建设项目【网站】；</p>
+        <p>6.重庆百可集团官网建设项目【网站】</p>
+        <p>7.重庆金科保理官网建设项目【网站】；</p>
+        <p>8.微信商城项目爱个购O2O商城；</p>
+        <p>9.微信商城项目爱个购线上商城；</p>
+        <p>10.同城配送项目跑腿邦；</p>
+        <p>11.爱个购商户管理后台。</p>
+      </section>
 
       <h3>专业技能</h3>
-      <p>
-        This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.
-      </p>
+      <section class="p-info">
+        <p>熟练使用DIV+CSS开发HTML网页；</p>
+        <p>熟练使用jQuery.js,zepto.js,swiper.js,iChart.js等js库；</p>
+        <p>熟练使用七牛云存储进行项目图片等资源管理；</p>
+        <p>熟练使用Ajax,JSON等技术；</p>
+        <p>熟练使用javaScript模板引擎doT；</p>
+        <p>熟练使用Git项目管理工具;</p>
+        <p>对移动端、微信端、PC端Web前端开发都有涉及，有webapp网页开发经验；</p>
+
+        <p>熟悉HTML5+CSS3开发，了解HTML5特性canvas画布、web存储、indexDB、离线缓存等技术；</p>
+        <p>熟悉gulp前端自动构建，能独立部署本地的环境；</p>
+        <p>熟悉javaScript,对ECMAScript6新特性有一些了解；</p>
+        <p>熟悉微信SDK的分享、定位等简单应用；</p>
+
+        <p>了解前端模块化，了解sea.js,require.js,commonJS；</p>
+        <p>了解React.js，Angular.js等前端开发框架；</p>
+        <p>了解node.js的一些基本操作；</p>
+        <p>了解HTTP基础知识；</p>
+        <p>了解React.js结合node.js在服务器端渲染页面。</p>
+      </section>
 
       <h3>工作意向</h3>
-      <p>
-        This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.
-      </p>
+      <section class="p-info">
+        <p>到岗时间：2016年3月1日</p>
+        <p>工作性质：全职</p>
+        <p>希望行业：计算机软件、互联网/电子商务、外包服务、计算机服务</p>
+        <p>目标地点：苏州、北京</p>
+        <p>期望薪资：8k-13k</p>
+        <p>目标职能：Web前端开发工程师、H5开发工程师、JavaScript开发工程师</p>
+        <p>求职状态：已递交辞职申请，交接工作在2016年2月底之前完成</p>
+      </section>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/DreamingLeeds/ZoneOfLmy">Zoneoflmy</a> is maintained by <a href="https://github.com/DreamingLeeds">DreamingLeeds</a>.</span>
@@ -52,6 +111,5 @@
       </footer>
 
     </section>
-
   </body>
 </html>
