--- a/wapdev/index.html
+++ b/wapdev/index.html
@@ -80,6 +80,7 @@
         <p>熟练使用Ajax,JSON等技术；</p>
         <p>熟练使用javaScript模板引擎doT；</p>
         <p>熟练使用Git项目管理工具;</p>
+        <p>熟练使用基于node.js的同步浏览工具browser-sync；</p>
         <p>对移动端、微信端、PC端Web前端开发都有涉及，有webapp网页开发经验；</p>
 
         <p>熟悉HTML5+CSS3开发，了解HTML5特性canvas画布、web存储、indexDB、离线缓存等技术；</p>
@@ -101,8 +102,8 @@
         <p>希望行业：计算机软件、互联网/电子商务、外包服务、计算机服务</p>
         <p>目标地点：苏州、北京</p>
         <p>期望薪资：8k-13k</p>
-        <p>目标职能：Web前端开发工程师、H5开发工程师、JavaScript开发工程师</p>
-        <p>求职状态：已递交辞职申请，交接工作在2016年2月底之前完成</p>
+        <p>目标职能：Web前端开发工程师</p>
+        <p>求职状态：目前正在找工作</p>
       </section>
 
       <footer class="site-footer">
