--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<script>
-  window.location.href="http://dreamingleeds.github.io/ZoneOfLmy/wap/";
-</script>
+<script>window.location.href="http://dreamingleeds.github.io/ZoneOfLmy/wap/";</script>
