--- a/wapdev/index.html
+++ b/wapdev/index.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" type="text/css" href="css/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="css/github-light.css" media="screen">
-
     <link rel="stylesheet" type="text/css" href="css/index.css" media="screen">
   </head>
   <body>
@@ -23,7 +22,7 @@
     </section>
 
     <section class="main-content">
-      <h3>个人信息</h3>
+      <h3 class="wow fadeInUp">个人信息</h3>
       <section class="p-info">
         <section class="p-info-d">姓名：李梦影</section>
         <section class="p-info-d">性别：女</section>
@@ -38,76 +37,76 @@
         <section class="clear-f"></section>
       </section>
 
-      <h3>工作经验</h3>
+      <h3 class="wow fadeInUp">工作经验</h3>
       <section class="p-info">
-        <p>2012-2013 暑期在重庆猫扑网络科技有限公司学习；</p>
-        <p>2012-2014 在重庆文理学院SOVO实验中心学习；</p>
-        <p>2015.3-2015.7 在重庆红杉软件有限公司工作；</p>
-        <p>2015.7-2016.2 在江苏慧库天下软件有限公司工作。</p>
+        <p class="">2012-2013 暑期在重庆猫扑网络科技有限公司学习；</p>
+        <p class="">2012-2014 在重庆文理学院SOVO实验中心学习；</p>
+        <p class="">2015.3-2015.7 在重庆红杉软件有限公司工作；</p>
+        <p class="">2015.7-2016.2 在江苏慧库天下软件有限公司工作。</p>
       </section>
 
-      <h3>在校项目经验</h3>
+      <h3 class="wow fadeInUp">在校项目经验</h3>
       <section class="p-info">
-        <p>1.重庆文理学院计算机工程实验教学中心【PC端】；</p>
-        <p>2.重庆文理学院软件工程学院教学质量测评系统【PC端】；</p>
-        <p>3.重庆文理学院软件工程学院教师信息管理系统【PC端】；</p>
-        <p>4.重庆文理学院校园十佳歌手大赛前台制作【PC端】；</p>
-        <p>5.参赛Flash项目：水【Flash】；</p>
-        <p>6.重庆市沙坪坝区新桥医院会议【PC端】；</p>
-        <p>7.重庆市大学生ACM程序设计大赛网站及ACM大赛信息管理系统【PC端】；</p>
-        <p>8.安卓项目开发实训：疯狂踩水果游戏开发【策划、美工】；</p>
-        <p>9.Java实训：易买网【PC端】。</p>
+        <p  class="">1.重庆文理学院计算机工程实验教学中心【PC端】；</p>
+        <p class="">2.重庆文理学院软件工程学院教学质量测评系统【PC端】；</p>
+        <p class="">3.重庆文理学院软件工程学院教师信息管理系统【PC端】；</p>
+        <p class="">4.重庆文理学院校园十佳歌手大赛前台制作【PC端】；</p>
+        <p class="">5.参赛Flash项目：水【Flash】；</p>
+        <p class="">6.重庆市沙坪坝区新桥医院会议【PC端】；</p>
+        <p class="">7.重庆市大学生ACM程序设计大赛网站及ACM大赛信息管理系统【PC端】；</p>
+        <p class="">8.安卓项目开发实训：疯狂踩水果游戏开发【策划、美工】；</p>
+        <p class="">9.Java实训：易买网【PC端】。</p>
       </section>
 
-      <h3>公司项目经验</h3>
+      <h3 class="wow fadeInUp">公司项目经验</h3>
       <section class="p-info">
-        <p>1.重庆树荣化工官网建设项目（中英文版）【PC端】；</p>
-        <p>2.重庆大圆祥房地产官网建设项目【PC端】；</p>
-        <p>3.重庆有木有鱼官网建设项目【PC端和移动端】；</p>
-        <p>4.香港徽帝中文网站建设项目【PC端】；</p>
-        <p>5.重庆喵鱼官网建设项目【PC端】；</p>
-        <p>6.重庆百可集团官网建设项目【PC端】</p>
-        <p>7.重庆金科保理官网建设项目【PC端】；</p>
-        <p>8.爱个购官网【PC端和移动端响应式】；</p>
-        <p>8.微信商城项目爱个购O2O商城【微信端和WebApp】；</p>
-        <p>9.微信商城项目爱个购线上商城【微信端】；</p>
-        <p>10.同城配送项目跑腿邦【微信端】；</p>
-        <p>11.爱个购商户管理后台【PC端】。</p>
+        <p class="">1.重庆树荣化工官网建设项目（中英文版）【PC端】；</p>
+        <p class="">2.重庆大圆祥房地产官网建设项目【PC端】；</p>
+        <p class="">3.重庆有木有鱼官网建设项目【PC端和移动端】；</p>
+        <p class="">4.香港徽帝中文网站建设项目【PC端】；</p>
+        <p class="">5.重庆喵鱼官网建设项目【PC端】；</p>
+        <p class="">6.重庆百可集团官网建设项目【PC端】</p>
+        <p class="">7.重庆金科保理官网建设项目【PC端】；</p>
+        <p class="">8.爱个购官网【PC端和移动端响应式】；</p>
+        <p class="">8.微信商城项目爱个购O2O商城【微信端和WebApp】；</p>
+        <p class="">9.微信商城项目爱个购线上商城【微信端】；</p>
+        <p class="">10.同城配送项目跑腿邦【微信端】；</p>
+        <p class="">11.爱个购商户管理后台【PC端】。</p>
       </section>
 
-      <h3>专业技能</h3>
+      <h3 class="wow fadeInUp">专业技能</h3>
       <section class="p-info">
-        <p>熟练使用DIV+CSS开发HTML网页；</p>
-        <p>熟练使用jQuery.js,zepto.js,swiper.js,iChart.js等js库；</p>
-        <p>熟练使用七牛云存储进行项目图片等资源管理；</p>
-        <p>熟练使用Ajax,JSON等技术；</p>
-        <p>熟练使用javaScript模板引擎doT；</p>
-        <p>熟练使用Git项目管理工具;</p>
-        <p>熟练使用基于node.js的同步浏览工具browser-sync；</p>
-        <p>对移动端、微信端、PC端Web前端开发都有涉及，有webapp网页开发经验；</p>
+        <p class="">熟练使用DIV+CSS开发HTML网页；</p>
+        <p class="">熟练使用jQuery.js,zepto.js,swiper.js,iChart.js,wow.js等js库；</p>
+        <p class="">熟练使用七牛云存储进行项目图片等资源管理；</p>
+        <p class="">熟练使用Ajax,JSON等技术；</p>
+        <p class="">熟练使用javaScript模板引擎doT；</p>
+        <p class="">熟练使用Git项目管理工具;</p>
+        <p class="">熟练使用基于node.js的同步浏览工具browser-sync；</p>
+        <p class="">对移动端、微信端、PC端Web前端开发都有涉及，有webapp网页开发经验；</p>
 
-        <p>熟悉响应式布局，会使用BootStrap或h5的media标签等方式实现响应式布局；</p>
-        <p>熟悉HTML5+CSS3开发，了解HTML5特性canvas画布、web存储、indexDB、离线缓存等技术；</p>
-        <p>熟悉gulp前端自动构建，能独立部署本地的环境；</p>
-        <p>熟悉javaScript,对ECMAScript6新特性有一些了解；</p>
-        <p>熟悉微信SDK的分享、定位等简单应用；</p>
+        <p class="">熟悉响应式布局，会使用BootStrap或h5的media标签等方式实现响应式布局；</p>
+        <p class="">熟悉HTML5+CSS3开发，了解HTML5特性canvas画布、web存储、indexDB、离线缓存等技术；</p>
+        <p class="">熟悉gulp前端自动构建，能独立部署本地的环境；</p>
+        <p class="">熟悉javaScript,对ECMAScript6新特性有一些了解；</p>
+        <p class="">熟悉微信SDK的分享、定位等简单应用；</p>
 
-        <p>了解前端模块化，了解sea.js,require.js,commonJS；</p>
-        <p>了解React.js，Angular.js等前端开发框架；</p>
-        <p>了解node.js的一些基本操作；</p>
-        <p>了解HTTP基础知识；</p>
-        <p>了解React.js结合node.js在服务器端渲染页面。</p>
+        <p class="">了解前端模块化，了解sea.js,require.js,commonJS；</p>
+        <p class="">了解React.js，Angular.js等前端开发框架；</p>
+        <p class="">了解node.js的一些基本操作；</p>
+        <p class="">了解HTTP基础知识；</p>
+        <p class="">了解React.js结合node.js在服务器端渲染页面。</p>
       </section>
 
-      <h3>工作意向</h3>
+      <h3 class="wow fadeInUp">工作意向</h3>
       <section class="p-info">
-        <p>到岗时间：2016年3月1日</p>
-        <p>工作性质：全职</p>
-        <p>希望行业：计算机软件、互联网/电子商务、外包服务、计算机服务</p>
-        <p>目标地点：苏州、北京</p>
-        <p>期望薪资：8k-13k</p>
-        <p>目标职能：Web前端开发工程师</p>
-        <p>求职状态：目前正在找工作</p>
+        <p class="">到岗时间：2016年3月1日</p>
+        <p class="">工作性质：全职</p>
+        <p class="">希望行业：计算机软件、互联网/电子商务、外包服务、计算机服务</p>
+        <p class="">目标地点：苏州、北京</p>
+        <p class="">期望薪资：8k-13k</p>
+        <p class="">目标职能：Web前端开发工程师</p>
+        <p class="">求职状态：目前正在找工作</p>
       </section>
 
       <section class="btn-top"></section>
@@ -121,6 +120,7 @@
     </section>
 
     <script type="text/javascript" src="js/lib/zepto.fastclick.doT.min.js"></script>
+    <script type="text/javascript" src="js/lib/wow-min.js"></script>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
